2012-08-17  Yong Li  <yoli@rim.com>

        [BlackBerry] Turn on a few macros for jpeg decoding and image interpolation
        https://bugs.webkit.org/show_bug.cgi?id=94244

        Reviewed by Antonio Gomes.

        Turn on these macros to get better performance.

        * wtf/Platform.h:

2012-08-17  Milian Wolff  <milian.wolff@kdab.com>

        [Qt] QNX build fails due to ctype usage in system headers
        https://bugs.webkit.org/show_bug.cgi?id=93849

        Reviewed by Simon Hausmann.

        Move the check for whether DisallowCType should be active or not
        to the DisallowCType.h header. This way, we can update the list
        of platforms or OSes which do not work with this header in a
        central place. All users can now safely include the header
        and do not need to place custom guards around it.

        * config.h:
        * wtf/DisallowCType.h:

2012-08-17  Milian Wolff  <milian.wolff@kdab.com>

        [Qt] QNX build fails due to missing timegm declaration
        https://bugs.webkit.org/show_bug.cgi?id=93842

        Reviewed by Simon Hausmann.

        On QNX, timegm is declared in nbutils.h and one must link against
        nbutils to use it.

        * WTF.pri:
        * wtf/DateMath.cpp:

2012-08-16  Kent Tamura  <tkent@chromium.org>

        Build fix for Chromium-mac.

        * wtf/text/WTFString.cpp: Remove unnecessary includes.

2012-08-16  Michael Saboff  <msaboff@apple.com>

        HTML Parser should produce 8bit substrings for inline style and script elements
        https://bugs.webkit.org/show_bug.cgi?id=93742

        Reviewed by Benjamin Poulain.

        Added 8 bit path to String::isAllSpecialCharacters(). Added new String creator
        that takes a pointer to a UChar array that is known to contain only 8 bit
        characters (LChar's). Added new helper method to copy contents of a
        UChar buffer to a LChar buffer. The helper method includes X86-64 intrinsics